# ccwork-lab

./: .gitignore  CLAUDE.md  LAB.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: lab-01-project-setup.md  lab-01-workflow.md  lab-01-workflow.yml  lab-02-identity.md  lab-02-identity.yml  lab-02-workflow.md  lab-03-identity.md  lab-04-review.md  lab-05a-design-mcp.md  lab-05b-build-ship.md
.github/workflows/: lab-ci.yml
docs/: PRD-template.md
labs/01/: lab-01-annotations.json  session.jsonl
labs/02/: lab-02-annotations.json  session.jsonl
labs/03/: lab-03-annotations.json  session.jsonl
labs/04/: lab-04-annotations.json
labs/05a/: lab-05a-annotations.json
labs/05b/: lab-05b-annotations.json  session.jsonl
mcp-server/: index.ts  package.json  tsconfig.json
scripts/ci/: validate-lab.sh
src/: app.py  calculator.py  formatter.py  hello.py
tests/: test_app.py  test_calculator.py  test_formatter.py  test_hello.py
