[project]
name = "ccwork-lab"
version = "0.1.0"
description = "Hands-on training ground for the Claude Code workflow kit"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
